--- a/styles/_resetBrowserStyles.scss
+++ b/styles/_resetBrowserStyles.scss
@@ -38,6 +38,7 @@ body {
   text-rendering: optimizeSpeed;
   line-height: 1.5;
   background-color: var(--clr-background-primary);
+  overflow: hidden;
 }
 
 ul,
